cmake_minimum_required(VERSION 3.16)
project(adventofcode2021)

set(CMAKE_CXX_STANDARD 20)

add_executable(Day1 Day1/Day1.cpp)
add_executable(Day2 Day2/Day2.cpp)
add_executable(Day3 Day3/Day3.cpp)
add_executable(Day4 Day4/main.cpp)
add_executable(Day5 Day5/main.cpp)
add_executable(Day6 Day6/main.cpp)
add_executable(Day7 Day7/main.cpp)
add_executable(Day8 Day8/main.cpp)
add_executable(Day9 Day9/main.cpp)
add_executable(Day10 Day10/main.cpp)
add_executable(Day11 Day11/main.cpp)
add_executable(Day12 Day12/main.cpp)
add_executable(Day13 Day13/main.cpp)
add_executable(Day14 Day14/main.cpp)
add_executable(Day15 Day15/main.cpp)
add_executable(Day16 Day16/main.cpp)
add_executable(Day17 Day17/main.cpp)
add_executable(Day18 Day18/main.cpp)
add_executable(Day19 Day19/main.cpp)
add_executable(Day20 Day20/main.cpp)
add_executable(Day21 Day21/main.cpp)
add_executable(Day22 Day22/main.cpp)
add_executable(Day23 Day23/main.cpp)
add_executable(Day24 Day24/main.cpp)
add_executable(Day25 Day25/main.cpp)
